--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,4 +14,4 @@ phases:
       - npm run build
   post_build:
     commands:
-      - aws s3 sync dist s3://urltools-ytsuchiya --delete
+      - aws s3 sync dist s3://looaf-urlparser --delete
